--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
         <h1>Our Menu</h1>
     </div>
 
-    <div class="item" id="item1">
-        <h2 class=>Chicken</h2>
+    <div class="items" id="item1">
+        <h2 class=item-heading>Chicken</h2>
         <p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
             ea commodo consequat.</p>
     </div>
 
-    <div class="item" id="item2">
-        <h2 class=>Beef</h2>
+    <div class="items" id="item2">
+        <h2 class=item-heading>Beef</h2>
         <p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
             ea commodo consequat.</p>
     </div>
 
-    <div class="item" id="item3">
-        <h2 class=>Sushi</h2>
+    <div class="items" id="item3">
+        <h2 class=item-heading>Sushi</h2>
         <p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
             ea commodo consequat.</p>
